changed manifest version

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "bitbucket auto close diff plugin",
   "description": "It will close difference what you don't need",
   "version": "1.0",
   "icons": {
     "16": "assets/bitbacket-icon-16.png",
-    "48": "assets/bitbacket-icon-16.png",
-    "128": "assets/bitbacket-icon-16.png"
+    "48": "assets/bitbacket-icon-48.png",
+    "128": "assets/bitbacket-icon-128.png"
   },
   "content_scripts": [
     {
@@ -20,5 +20,6 @@
         "https://bitbucket.org/*"
       ]
     }
-  ]
+  ],
+  "author": "Bogdan Pryvalov"
 }
